--- a/project_role/i18n/it.po
+++ b/project_role/i18n/it.po
@@ -4,71 +4,79 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2023-05-24 18:11+0000\n"
+"Last-Translator: Francesco Foresti <francesco.foresti@ooops404.com>\n"
 "Language-Team: none\n"
-"Language: es_PA\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.17\n"
 
 #. module: project_role
 #. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "%(USER)s as %(ROLE)s"
-msgstr ""
+msgstr "%(USER)s come %(ROLE)s"
 
 #. module: project_role
 #. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "%(USER)s as %(ROLE)s in %(PROJECT)s"
-msgstr ""
+msgstr "%(USER)s come %(ROLE)s in %(PROJECT)s"
 
 #. module: project_role
 #. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "%(USER)s as %(ROLE)s on %(PROJECT)s"
-msgstr ""
+msgstr "%(USER)s come %(ROLE)s in %(PROJECT)s"
 
 #. module: project_role
 #. odoo-python
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "%(parent)s / %(own)s"
-msgstr ""
+msgstr "%(parent)s / %(own)s"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid ""
 "<span class=\"fa fa-lg fa-building-o\" title=\"Values set here are company-"
-"specific.\" role=\"img\" aria-label=\"Values set here are company-specific."
-"\" groups=\"base.group_multi_company\"/>"
+"specific.\" role=\"img\" aria-label=\"Values set here are company-"
+"specific.\" groups=\"base.group_multi_company\"/>"
 msgstr ""
+"<span class=\"fa fa-lg fa-building-o\" title=\"I valori impostati qui sono "
+"specifici per azienda.\" role=\"img\" aria-label=\"I valori impostati qui "
+"sono specifici per azienda.\" groups=\"base.group_multi_company\"/>"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid ""
 "<span class=\"o_form_label\">Project Roles</span>\n"
-"                                <span class=\"fa fa-lg fa-building-o\" title="
-"\"Values set here are company-specific.\" role=\"img\" aria-label=\"Values "
-"set here are company-specific.\" groups=\"base.group_multi_company\"/>"
+"                                <span class=\"fa fa-lg fa-building-o\" title=\"Values set here are company-specific.\" role=\"img\" aria-label=\"Values set here are company-specific.\" groups=\"base.group_multi_company\"/>"
 msgstr ""
+"<span class=\"o_form_label\">Ruoli progetto</span>\n"
+"                                <span class=\"fa fa-lg fa-building-o\" title="
+"\"I valori impostati qui sono specifici per azienda.\" role=\"img\" aria-"
+"label=\"I valori impostati qui sono specifici per azienda.\" groups=\"base."
+"group_multi_company\"/>"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_needaction
 msgid "Action Needed"
-msgstr ""
+msgstr "Azione richiesta"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__active
 #: model:ir.model.fields,field_description:project_role.field_project_role__active
 msgid "Active"
-msgstr ""
+msgstr "Attivo"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_form
@@ -76,7 +84,7 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:project_role.project_role_search
 #: model_terms:ir.ui.view,arch_db:project_role.project_role_view_form
 msgid "Archived"
-msgstr ""
+msgstr "In archivio"
 
 #. module: project_role
 #. odoo-python
@@ -86,312 +94,318 @@ msgid ""
 "Assignment %(ASSIGNMENT)s conflicts with another assignment: "
 "%(OTHER_ASSIGNMENT)s"
 msgstr ""
+"L'incarico %(ASSIGNMENT)s è in conflitto con un altro incarico: "
+"%(OTHER_ASSIGNMENT)s"
 
 #. module: project_role
 #: model:ir.actions.act_window,name:project_role.project_assignment_view_project_action
 #: model:ir.ui.menu,name:project_role.menu_project_assignments
 #: model_terms:ir.ui.view,arch_db:project_role.edit_project
 msgid "Assignments"
-msgstr ""
+msgstr "Incarichi"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_attachment_count
 msgid "Attachment Count"
-msgstr ""
+msgstr "Conteggio allegati"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid "Check to configure projects to inherit company assignments by default."
 msgstr ""
+"Selezionare per configurare i progetti per ereditare in modo predefinito gli "
+"incarichi dell'azienda."
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid "Check to configure projects to limit role to assignments by default."
 msgstr ""
+"Selezionare per configurare i progetti per limitare il ruolo agli incarichi "
+"in modo predefinito."
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__child_ids
 msgid "Child Roles"
-msgstr ""
+msgstr "Ruoli figli"
 
 #. module: project_role
 #: model:ir.model,name:project_role.model_res_company
 msgid "Companies"
-msgstr ""
+msgstr "Aziende"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__company_id
 #: model:ir.model.fields,field_description:project_role.field_project_role__company_id
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "Company"
-msgstr ""
+msgstr "Azienda"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "Company-Wide"
-msgstr ""
+msgstr "Tutta l'azienda"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__complete_name
 msgid "Complete Name"
-msgstr ""
+msgstr "Nome completo"
 
 #. module: project_role
 #: model:ir.model,name:project_role.model_res_config_settings
 msgid "Config Settings"
-msgstr ""
+msgstr "Impostazioni configurazione"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid "Configure set of roles, available on projects."
-msgstr ""
+msgstr "Configurare gruppi di ruoli, disponibili nei progetti."
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__create_uid
 #: model:ir.model.fields,field_description:project_role.field_project_role__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Creato da"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__create_date
 #: model:ir.model.fields,field_description:project_role.field_project_role__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Creato il"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__description
 msgid "Description"
-msgstr ""
+msgstr "Descrizione"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__display_name
 #: model:ir.model.fields,field_description:project_role.field_project_role__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nome visualizzato"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_follower_ids
 msgid "Followers"
-msgstr ""
+msgstr "Seguito da"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_partner_ids
 msgid "Followers (Partners)"
-msgstr ""
+msgstr "Seguito da (partner)"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "Group By"
-msgstr ""
+msgstr "Raggruppa per"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__has_message
 msgid "Has Message"
-msgstr ""
+msgstr "Ha un messaggio"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__id
 #: model:ir.model.fields,field_description:project_role.field_project_role__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_needaction
 msgid "If checked, new messages require your attention."
-msgstr ""
+msgstr "Se selezionata, nuovi messaggi richiedono attenzione."
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_has_error
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_has_sms_error
 msgid "If checked, some messages have a delivery error."
-msgstr ""
+msgstr "Se selezionata, alcuni messaggi hanno un errore di consegna."
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_project__inherit_assignments
 msgid "Inherit Assignments"
-msgstr ""
+msgstr "Eredita incarichi"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_is_follower
 msgid "Is Follower"
-msgstr ""
+msgstr "Segue"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment____last_update
 #: model:ir.model.fields,field_description:project_role.field_project_role____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Ultima modifica il"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__write_uid
 #: model:ir.model.fields,field_description:project_role.field_project_role__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Ultimo aggiornamento di"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__write_date
 #: model:ir.model.fields,field_description:project_role.field_project_role__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Ultimo aggiornamento il"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_res_company__project_limit_role_to_assignments
 #: model:ir.model.fields,field_description:project_role.field_res_config_settings__project_limit_role_to_assignments
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid "Limit Project Role to Assignments"
-msgstr ""
+msgstr "Limita ruolo progetto agli incarichi"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_project__limit_role_to_assignments
 msgid "Limit Role To Assignments"
-msgstr ""
+msgstr "Limita il ruolo agli incarichi"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_main_attachment_id
 msgid "Main Attachment"
-msgstr ""
+msgstr "Allegato principale"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_has_error
 msgid "Message Delivery error"
-msgstr ""
+msgstr "Errore di consegna messaggio"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_ids
 msgid "Messages"
-msgstr ""
+msgstr "Messaggi"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "My Assignments"
-msgstr ""
+msgstr "Miei incarichi"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__name
 #: model:ir.model.fields,field_description:project_role.field_project_role__name
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_needaction_counter
 msgid "Number of Actions"
-msgstr ""
+msgstr "Numero di azioni"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_has_error_counter
 msgid "Number of errors"
-msgstr ""
+msgstr "Numero di errori"
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_needaction_counter
 msgid "Number of messages which requires an action"
-msgstr ""
+msgstr "Numero di messaggi che richiedono un'azione"
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_has_error_counter
 msgid "Number of messages with delivery error"
-msgstr ""
+msgstr "Numero di messaggi con errore di consegna"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__parent_path
 msgid "Parent Path"
-msgstr ""
+msgstr "Percorso padre"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__parent_id
 msgid "Parent Role"
-msgstr ""
+msgstr "Ruolo padre"
 
 #. module: project_role
 #. odoo-python
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "Please activate first parent role %s"
-msgstr ""
+msgstr "Attivare prima il ruolo padre %s"
 
 #. module: project_role
 #: model:ir.model,name:project_role.model_project_project
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__project_id
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "Project"
-msgstr ""
+msgstr "Progetto"
 
 #. module: project_role
 #: model:ir.model,name:project_role.model_project_assignment
 msgid "Project Assignment"
-msgstr ""
+msgstr "Incarico progetto"
 
 #. module: project_role
 #: model:ir.actions.act_window,name:project_role.project_assignment_view_all_action
 #: model:ir.model.fields,field_description:project_role.field_project_project__assignment_ids
 msgid "Project Assignments"
-msgstr ""
+msgstr "Incarichi progetto"
 
 #. module: project_role
 #: model:ir.model,name:project_role.model_project_role
 msgid "Project Role"
-msgstr ""
+msgstr "Ruolo progetto"
 
 #. module: project_role
 #: model:ir.actions.act_window,name:project_role.company_project_roles_action
 #: model:ir.ui.menu,name:project_role.project_menu_config_roles
 msgid "Project Roles"
-msgstr ""
+msgstr "Ruoli progetto"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_res_company__project_inherit_assignments
 #: model:ir.model.fields,field_description:project_role.field_res_config_settings__project_inherit_assignments
 msgid "Projects Inherit Assignments"
-msgstr ""
+msgstr "Incarichi ereditati dal progetto"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid "Projects inherit Company assignments"
-msgstr ""
+msgstr "I progetti ereditano gli incarichi azienda"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__role_id
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "Role"
-msgstr ""
+msgstr "Ruolo"
 
 #. module: project_role
 #. odoo-python
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "Role \"%s\" conflicts with another role due to same name."
-msgstr ""
+msgstr "Il ruolo \"%s\" è in conflitto con un altro ruolo con lo stesso nome."
 
 #. module: project_role
 #: model:ir.model.constraint,message:project_role.constraint_project_role_name_company_uniq
 msgid "Role with such name already exists in the company!"
-msgstr ""
+msgstr "Esiste già un ruolo con questo nome nell'azienda!"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid "Roles &amp; Assignments"
-msgstr ""
+msgstr "Ruoli &amp; incarichi"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_has_sms_error
 msgid "SMS Delivery error"
-msgstr ""
+msgstr "Errore consegna SMS"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid "Setup project roles"
-msgstr ""
+msgstr "Configura ruoli progetto"
 
 #. module: project_role
 #: model:ir.model.constraint,message:project_role.constraint_project_role_name_nocompany_uniq
 msgid "Shared role with such name already exists!"
-msgstr ""
+msgstr "Esiste già un ruolo condiviso con lo stesso nome!"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__user_id
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "User"
-msgstr ""
+msgstr "Utente"
 
 #. module: project_role
 #. odoo-python
@@ -399,35 +413,38 @@ msgstr ""
 #, python-format
 msgid "User %(USER)s can not be assigned to role %(ROLE)s on %(PROJECT)s."
 msgstr ""
+"L'utente %(USER)s non può essere assegnato al ruolo %(ROLE)s in %(PROJECT)s."
 
 #. module: project_role
 #. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "User %(USER)s can not be assigned to role %(ROLE)s."
-msgstr ""
+msgstr "L'utente %(USER)s non può essere assegnato al ruolo %(ROLE)s."
 
 #. module: project_role
 #: model:ir.model.constraint,message:project_role.constraint_project_assignment_company_role_user_uniq
 msgid "User may be assigned per role only once within a company!"
 msgstr ""
+"Un utente può essere assegnato ad un solo ruolo alla volta in una azienda!"
 
 #. module: project_role
 #: model:ir.model.constraint,message:project_role.constraint_project_assignment_project_role_user_uniq
 msgid "User may be assigned per role only once within a project!"
 msgstr ""
+"Un utente può essere assegnato ad un solo ruolo alla volta in un progetto!"
 
 #. module: project_role
 #: model:ir.model.constraint,message:project_role.constraint_project_assignment_nocompany_role_user_uniq
 msgid "User may be assigned per role only once!"
-msgstr ""
+msgstr "Un utente può essere assegnato ad un ruolo alla volta!"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__website_message_ids
 msgid "Website Messages"
-msgstr ""
+msgstr "Messaggi sito web"
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__website_message_ids
 msgid "Website communication history"
-msgstr ""
+msgstr "Storico comunicazioni sito web"
