--- a/project_role/i18n/project_role.pot
+++ b/project_role/i18n/project_role.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,24 +14,28 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "%(USER)s as %(ROLE)s"
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "%(USER)s as %(ROLE)s in %(PROJECT)s"
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "%(USER)s as %(ROLE)s on %(PROJECT)s"
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "%(parent)s / %(own)s"
@@ -72,6 +76,7 @@ msgid "Archived"
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid ""
@@ -189,7 +194,6 @@ msgstr ""
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_needaction
-#: model:ir.model.fields,help:project_role.field_project_assignment__message_unread
 msgid "If checked, new messages require your attention."
 msgstr ""
 
@@ -286,11 +290,6 @@ msgid "Number of messages with delivery error"
 msgstr ""
 
 #. module: project_role
-#: model:ir.model.fields,help:project_role.field_project_assignment__message_unread_counter
-msgid "Number of unread messages"
-msgstr ""
-
-#. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__parent_path
 msgid "Parent Path"
 msgstr ""
@@ -301,6 +300,7 @@ msgid "Parent Role"
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "Please activate first parent role %s"
@@ -353,6 +353,7 @@ msgid "Role"
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "Role \"%s\" conflicts with another role due to same name."
@@ -384,28 +385,20 @@ msgid "Shared role with such name already exists!"
 msgstr ""
 
 #. module: project_role
-#: model:ir.model.fields,field_description:project_role.field_project_assignment__message_unread
-msgid "Unread Messages"
-msgstr ""
-
-#. module: project_role
-#: model:ir.model.fields,field_description:project_role.field_project_assignment__message_unread_counter
-msgid "Unread Messages Counter"
-msgstr ""
-
-#. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__user_id
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
 msgid "User"
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "User %(USER)s can not be assigned to role %(ROLE)s on %(PROJECT)s."
 msgstr ""
 
 #. module: project_role
+#. odoo-python
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "User %(USER)s can not be assigned to role %(ROLE)s."
